Fixed extraneous closing } and generally messy spacing in LESS files that was causing the build to fail with the latest version of LESS. This is why tabs are better for intendation *grumble*

--- a/source/less/components/switch.less
+++ b/source/less/components/switch.less
@@ -1,109 +1,108 @@
 // Switch
 .switch {
-    display: inline-block;
-    cursor: pointer;
+  display: inline-block;
+  cursor: pointer;
 
-    &:hover input[type="checkbox"] + span + span::before {
-      .gradient(@switch-handle-gradient-start-color, @switch-handle-gradient-start-color);
+  &:hover input[type="checkbox"] + span + span::before {
+    .gradient(@switch-handle-gradient-start-color, @switch-handle-gradient-start-color);
+  }
+  &:hover input[type="checkbox"]:disabled + span + span::before {
+    .gradient(@switch-handle-gradient-start-color, @switch-handle-gradient-end-color);
+  }
+
+  input[type=checkbox] {
+    width: @px;
+    float: right;
+    height: @px;
+    margin-bottom: -@px;
+
+    + span {
+      color: @switch-text-selected-color;
+      padding-right: 0.5rem;
+
+      &:before {
+        display: none;
+      }
+      &:after {
+        display: inline-block;
+        vertical-align: middle;
+        margin: 0 0 0 5*@px;
+        .border-box;
+        .border-radius(0.25rem);
+        background-color: @switch-slider-background-color;
+        content: "\a0";
+        width: 32*@px;
+        height: 8*@px;
+        border: @px solid @slider-border-color;
+      }
     }
-    &:hover input[type="checkbox"]:disabled + span + span::before {
-      .gradient(@switch-handle-gradient-start-color, @switch-handle-gradient-end-color);
+
+    + span + span {
+      color: @switch-text-color;
+      margin-left: -0.75rem; // Remove whitespace between-inline block elements
+      &:before {
+        position: relative;
+        left: -28*@px;
+        display: inline-block;
+        vertical-align: middle;
+        .border-box;
+        .border-radius(0.25rem);
+        .gradient(@switch-handle-gradient-start-color, @switch-handle-gradient-end-color);
+        content: "\a0"; // Todo: replace with icon
+        line-height: 1.6;
+        width: 9*@px;
+        height: 20*@px;
+        border: @px solid @slider-border-color;
+      }
+      &:after {
+        display: none;
+      }
     }
 
-    input[type=checkbox] {
-      width: @px;
-      float: right;
-      height: @px;
-      margin-bottom: -@px;
+    &:checked + span {
+      color: @switch-text-color;
+      &:after {
+        background-color: @switch-selected-slider-background-color;
+        border-color: @switch-selected-slider-border-color;
+        background-image: none;
+      }
+    }
 
+    &:checked + span + span {
+      color: @switch-text-selected-color;
+      &:before {
+        left: -5*@px;
+      }
+    }
+
+    &:focus + span:after,
+    &:focus + span + span:before {
+      .glow();
+    }
+
+    &:disabled {
       + span {
-        color: @switch-text-selected-color;
-        padding-right: 0.5rem;
-        
-        &:before {
-          display: none;
-        }
+        color: @switch-disabled-selected-text-color;
         &:after {
-          display: inline-block;
-          vertical-align: middle;
-          margin: 0 0 0 5*@px;
-          .border-box;
-          .border-radius(0.25rem);
-          background-color: @switch-slider-background-color;
-          content: "\a0";
-          width: 32*@px;
-          height: 8*@px;
-          border: @px solid @slider-border-color;
+          background-color: @switch-disabled-background-color;
+          border-color: @switch-disabled-border-color;
         }
       }
-
       + span + span {
-        color: @switch-text-color;
-        margin-left: -0.75rem; // Remove whitespace between-inline block elements
+        color: @switch-disabled-text-color;
         &:before {
-          position: relative;
-          left: -28*@px;
-          display: inline-block;
-          vertical-align: middle;
-          .border-box;
-          .border-radius(0.25rem);
-          .gradient(@switch-handle-gradient-start-color, @switch-handle-gradient-end-color);
-          content: "\a0"; // Todo: replace with icon
-          line-height: 1.6;
-          width: 9*@px;
-          height: 20*@px;
-          border: @px solid @slider-border-color;
-        }
-        &:after {
-          display: none;
+          background-color: @switch-disabled-background-color;
+          border-color: @switch-disabled-border-color;
         }
       }
-
       &:checked + span {
-        color: @switch-text-color;
+        color: @switch-disabled-text-color;
         &:after {
-          background-color: @switch-selected-slider-background-color;
-          border-color: @switch-selected-slider-border-color;
-          background-image: none;
+          background-color: @switch-disabled-selected-slider-background-color;
         }
       }
-
       &:checked + span + span {
-        color: @switch-text-selected-color;
-        &:before {
-          left: -5*@px;
-        }
-      }
-
-      &:focus + span:after,
-      &:focus + span + span:before {
-        .glow();
-      }
-
-      &:disabled {
-        + span {
-          color: @switch-disabled-selected-text-color;
-          &:after {
-            background-color: @switch-disabled-background-color;
-            border-color: @switch-disabled-border-color;
-          }
-        }
-        + span + span {
-          color: @switch-disabled-text-color;
-          &:before {
-            background-color: @switch-disabled-background-color;
-            border-color: @switch-disabled-border-color;
-          }
-        }
-        &:checked + span {
-          color: @switch-disabled-text-color;
-          &:after {
-          	background-color: @switch-disabled-selected-slider-background-color;
-          }
-        }
-        &:checked + span + span {
-          color: @switch-disabled-selected-text-color;
-        }
+        color: @switch-disabled-selected-text-color;
       }
     }
   }
